<resources>
    <string name="app_name">TravellerNoteBook</string>
    <string name="txt_save">Save</string>
    <string name="txt_savings">Savings</string>
    <string name="txt_update_savings">Update Savings</string>
    <string name="txt_password">Password</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_email">Email</string>
    <string name="txt_user_name">UserName</string>
    <string name="txt_reset">Reset</string>
    <string name="txt_name">Name</string>
    <string name="txt_add_location">Add Location</string>
    <string name="txt_start_date">Start Date</string>
    <string name="txt_date">Date</string>
    <string name="txt_end_date">End Date</string>
    <string name="txt_budget">Budget</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_remove">Remove</string>
    <string name="txt_add_quote">Add quote</string>
    <string name="txt_shared_trips">Shared trips</string>
    <string name="txt_from">From</string>
    <string name="txt_to">To</string>
    <string name="txt_media">Media</string>
    <string name="txt_list">List</string>
    <string name="txt_map">Map</string>
    <string name="txt_add_new_activity">Add new activity .....</string>
    <string name="txt_total">Total</string>
    <string name="txt_upcoming">Upcoming</string>
    <string name="msg_this_field_required">this field required</string>
    <string name="msg_auth_error">authentication error</string>
    <string name="msg_location_budget_invalid">Location budget has to be less than trip budget </string>
    <string name="msg_profile_info_missing_error">Please fill profile info before sharing (username,email,phone)</string>
    <string name="msg_dates_error">End date has to be after start date</string>
    <string name="txt_location_activities">Location Activities</string>
    <string name="txt_login">LOGIN</string>
    <string name="msg_login_with_biometric">Log in using your biometric credential</string>
    <string name="txt_share">SHARE</string>
    <string name="msg_upcoming_trips">Check travellers upcoming trips</string>
    <string name="msg_traveller_shared_trip">Traveller shared a new trip</string>
    <string name="txt_upcoming_trips">Upcoming Trips</string>
    <string name="txt_close">Close</string>
    <string name="maps_api_key">AIzaSyCfAiZPLV5twQ8NE-tfRtIQIozOLqjZmnE</string>
    <string name="txt_auth_error">Authentication error</string>
    <string name="txt_auth_failed">Authentication failed</string>

    <!-- content Descriptions -->
    <string name="desc_close_popup">Close add activity quote popup</string>
    <string name="desc_upload_user_profile_image">Upload user profile image</string>
    <string name="desc_back_button">Back button to move back to previous screen</string>
    <string name="desc_scan_finger_print">Scan finger print to login</string>
    <string name="desc_trip_main_image">Trip main image represent trip main location image</string>
    <string name="desc_delete_uploaded_location_image">Delete uploaded location image</string>
    <string name="desc_uploaded_location_image">Uploaded location image</string>
    <string name="desc_location_main_image">Location main image represent main location image</string>
    <string name="desc_upload_trip_main">Upload trip main image</string>
    <string name="desc_upload_location_main">Upload location main image</string>
</resources>
