<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding">

    <ImageView
        android:id="@+id/imgLocationMain"
        android:layout_width="@dimen/image_size_medium"
        android:layout_height="@dimen/image_size_medium"
        android:src="@drawable/ic_profileholder"
        app:layout_constraintBottom_toTopOf="@+id/edtLocationName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtLocationName"
        style="@style/edit"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/txt_name"
        android:inputType="text"
        android:nextFocusForward="@id/edtBudget"
        app:layout_constraintBottom_toTopOf="@+id/txtLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtLocation"
        style="@style/edit"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/txt_add_location"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txtDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDate"
        style="@style/edit"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/txt_date"
        app:layout_constraintBottom_toTopOf="@+id/edtBudget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <EditText
        android:id="@+id/edtBudget"
        style="@style/edit"
        android:layout_width="0dp"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/edit_text_background"
        android:hint="0"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="@+id/txtDate"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/txt_budget"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtBudget"
        app:layout_constraintStart_toStartOf="@+id/btnSubmit"
        app:layout_constraintTop_toTopOf="@+id/edtBudget" />

    <Button
        android:id="@+id/btnSubmit"
        style="@style/button"
        android:text="@string/txt_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>