<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="@dimen/small_button_size"
        android:layout_height="@dimen/small_button_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/imagepicker_ic_back"
        tools:srcCompat="@drawable/imagepicker_ic_back" />

    <ImageView
        app:layout_constraintVertical_bias=".3"
        android:id="@+id/imgProfilePhoto"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:src="@drawable/ic_profileholder"
        app:layout_constraintBottom_toTopOf="@+id/edtUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtUserName"
        style="@style/edit"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/txt_user_name"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:nextFocusForward="@id/edtEmail"
        app:layout_constraintBottom_toTopOf="@+id/edtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtEmail"
        style="@style/edit"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/txt_email"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:nextFocusForward="@id/edtPhone"
        app:layout_constraintBottom_toTopOf="@+id/edtPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtPhone"
        style="@style/edit"
        android:inputType="phone"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/txt_phone"
        android:imeOptions="actionNext"
        android:nextFocusForward="@id/edtPassword"
        app:layout_constraintBottom_toTopOf="@+id/edtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtPassword"
        style="@style/edit"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toTopOf="@+id/space3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Space
        android:id="@+id/space3"
        style="@style/edit"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        style="@style/button"
        android:text="@string/txt_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>