<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding">

    <ImageView
        android:contentDescription="@string/desc_back_button"
        android:id="@+id/imgBack"
        android:layout_width="@dimen/small_button_size"
        android:layout_height="@dimen/small_button_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/imagepicker_ic_back"
        tools:srcCompat="@drawable/imagepicker_ic_back" />
    <TextView
        android:textStyle="bold"
        app:layout_constraintVertical_bias=".8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_add_new_activity"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/edtActivity"
        app:layout_constraintStart_toStartOf="@+id/edtActivity"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtActivity"
        style="@style/edit"
        android:layout_height="200dp"
        android:layout_margin="@dimen/default_margin"
        android:gravity="top"
        android:inputType="text"
        android:padding="@dimen/default_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <Button
        android:id="@+id/btnSubmit"
        style="@style/button"
        android:text="@string/txt_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>