<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/constContainer"
    android:padding="@dimen/small_padding">

    <TextView
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_budget"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/txtBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0$"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_savings"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/txtSavings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0$"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/btnUpdate"
        android:layout_height="50dp"
        android:textSize="20sp"
        style="@style/button"
        android:textAllCaps="false"
        android:text="@string/txt_update_savings"
        android:layout_centerHorizontal="true" />
</RelativeLayout>