<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height"
    android:padding="@dimen/default_padding"
    android:id="@+id/constContainer">

    <ImageView
        android:contentDescription="@string/desc_trip_main_image"
        android:id="@+id/imgTripMainPic"
        android:layout_width="@dimen/image_size_small"
        android:layout_height="@dimen/image_size_small"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTripName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imgTripMainPic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="@dimen/small_padding"
        android:text="$"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginStart="@dimen/default_padding"
        android:id="@+id/txtFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:textColor="@android:color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/tagFrom"
        app:layout_constraintStart_toEndOf="@+id/tagFrom"
        app:layout_constraintTop_toTopOf="@+id/tagFrom"
        android:layout_marginLeft="@dimen/default_padding" />

    <TextView
        android:id="@+id/txtTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:textColor="@android:color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/tagTo"
        app:layout_constraintStart_toStartOf="@+id/txtFrom"
        app:layout_constraintTop_toTopOf="@+id/tagTo" />
    <TextView
        android:id="@+id/tagFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_from"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/tagTo"
        app:layout_constraintStart_toStartOf="@+id/tagTo" />
    <TextView
        android:id="@+id/tagTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_to"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/imgTripMainPic"
        app:layout_constraintStart_toStartOf="@+id/txtTripName" />

</androidx.constraintlayout.widget.ConstraintLayout>